# toolworks

./: .gitignore  AGENTS.md  BUILD.md  LICENSE  README.md
automation/campaign-emailer/: README.md  campaign_emailer.py  pyproject.toml
automation/campaign-emailer/templates/: sig-images.json  v2-coverage-offer.html
automation/campaign-emailer/tests/: test_campaign_emailer.py
automation/work-emailer/: README.md  pyproject.toml  work_emailer.py
automation/work-emailer/templates/: cloud-backup-only.html  coverage-150-credit.html  coverage-300-credit.html  tailscale-remote-access.html  windows-10-upgrade.html
automation/work-emailer/tests/: test_work_emailer.py
docs/: conventions.md
