[project]
name = "work-emailer"
version = "0.1.0"
description = "Outlook-backed post-call follow-up email sender for macOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
  "ruff>=0.13,<0.14",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
